<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="loading">We are loading</string>
    <string name="download">Download</string>
    <string name="toast_desc">Please select the file to download</string>

    <string name="notification_channel_id" translatable="false">download_channel</string>
    <string name="notification_channel_name" translatable="true">Download</string>
    <string name="notification_channel_description">Download reminder</string>
    <string name="check_the_status">Check the status</string>
    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="ok">OK</string>
    <string name="file_name">File name:</string>
    <string name="status">Status:</string>
    <string name="notification_desc">The Project 3 repository is downloaded</string>
    <string name="filename1">Glide - Image Loading Library by BumpTech</string>
    <string name="filename2">LoadingApp - Current repository by Udacity</string>
    <string name="filename3">Retrofit - Type-safe HTTP client for Android and JAVA by Square, Inc</string>
</resources>
